namespace FishingRodSystem
{
    public enum ReelParameter
    {
        /// <summary>
        /// float
        /// </summary>
        SpinSpeed,

        /// <summary>
        /// bool
        /// </summary>
        IsSpinning,
        /// <summary>
        /// bool
        /// </summary>
        IsSpinningForward,

        /// <summary>
        /// trigger
        /// </summary>
        SpinForwardTrigger,
        /// <summary>
        /// trigger
        /// </summary>
        SpinBackwardTrigger,
        /// <summary>
        /// trigger
        /// </summary>
        SpinStopTrigger
    }
}